samples/_failures_safe/1761151966_50da2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee2a3551.c: In function ‘main’:
./samples/SAFE/__tmp_ee2a3551.c:143:20: error: missing terminating " character
  143 |             printf("Invalid
      |                    ^~~~~~~~
./samples/SAFE/__tmp_ee2a3551.c:143:13: error: expected expression at end of input
  143 |             printf("Invalid
      |             ^~~~~~
./samples/SAFE/__tmp_ee2a3551.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee2a3551.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee2a3551.c:143:13: error: expected declaration or statement at end of input
